# zero-shot-bert-adapters

./: .gitignore  .travis.yml  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-test.yml
dataset/: test_banking_it.csv
results/: gptj_prompt1.csv  gptj_prompt2.csv  gptj_prompt3_incl_classes.csv  gptj_prompt4_incl_classes.csv  preds.csv  snli_classes.csv  t0_prompt3_incl_classes.csv  t0_prompt4_incl_classes.csv  t0pp_prompt1.csv  t0pp_prompt2.csv
scripts/: evaluation.py  generate_prompts.py  main.py  nli_augmentation.py  zs_generator.py  zs_generator_snli.py  zs_generator_with_labels.py  zs_model_generators.py
src/zberta/: __init__.py
src/zberta/data/: data_banking.py  data_preparation.py  data_snli.py
src/zberta/intent_discovery/: unknown_intents.py  zberta.py
src/zberta/legacytorch/: dataset.py  field.py  iterator.py  vocab.py
src/zberta/model/: berta.py  model.py
src/zberta/test/: test.py
src/zberta/train/: trainer.py
src/zberta/utils/: utils.py
test/: test.py
