[metadata]
name = Z-BERT-A
version = attr: zberta.__version__
description = Z-BERT-A: a Zero-Shot Pipeline for Unknown Intent detection
author = Daniele Comi, Matteo Manica, Dimitrios Christofidellis
author_email = daniele.comi@ibm.com, drugilsberg@gmail.com, dic@zurich.ibm.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    adapter-transformers
    torch
    pandas
    numpy
    nltk
    tqdm
    datasets
    torchtext
    rich
    spacy
    setuptools
    sentence-transformers
    spacy-alignments

[options.packages.find]
where = src

[options.package_data]
zberta =
    py.typed
